Fix #11278 - [Bug] Save dates in GMT format in activities